drupal/sites/all/themes/antistatique/assets/sass/organisms/_header.scss
.cover-overlap {
  margin-top: -110px;
  position: relative;

  h1 {
    margin-bottom: $font-size-base * 4;
  }
  h2 {
    padding-bottom: 38px;

    .field-teammate-job-title {
      max-width: none;
    }
  }

  header {
    border-bottom: 1px solid $hr-border;
    margin-bottom: 30px;
    @media only screen and (min-width: $screen-sm-min) {text-align: center;}
    position: relative;
    z-index: 1;

    @media only screen and (max-width: $screen-xs-max) {
      .team-avatar + p {
        display: inline-block !important; // override .hidden-xs in this case only (on the article page)
      }
    }
    img {
      max-width: 100px;
    }
    .field-co-author {
      display: inline-block;
      @media only screen and (min-width: $screen-sm-min) {
        margin: 0 15px;
      }
    }
  }
  @media only screen and (max-width: $screen-xs-max) {
    margin-top: 0;
    h1 { margin-bottom: $font-size-base; }
    h2 { padding-bottom: $font-size-base; }
    header {
      img {
        max-width: 60px;
      }
    }
  }
}

.img-hero {
  min-height: 600px;
  background-color: $dust;
  background-size: cover;
  background-position: 50% 50%;
  transition: min-height ease-in-out 0.3s;
  position: relative;
  .dark-hero &{
      background-color: $midnight-blue;
  }
  h1 {
    position: absolute;
    bottom: 0;
    width: 100%;
    color: $white;
    padding-top: 2em;
    padding-left: 15px;  // avoids a too wide title on mobile
    padding-right: 15px; // (because not in a container)
    z-index: 1;
    & > span {
      display: block;
      margin: 0 auto;
      max-width: 1200px;
    }
    @media only screen and (min-width: $screen-sm-min) {
      margin-bottom: 0;
      padding-bottom: 1em;
      text-align: center;
      background: linear-gradient(to bottom, transparentize($midnight-blue, 1) 0%, transparentize($midnight-blue, 0.2) 100%);
    }
  }
  @media only screen and (max-width: $screen-xs-max) {
    &:after {
      content: '';
      background: linear-gradient(to bottom, transparentize($midnight-blue, 1) 0%, transparentize($midnight-blue, 0.2) 100%);
      position: absolute;
      bottom: 0;
      left: 0;
      height: 60%;
      width: 100%;
    }
  }
  .img-svg-title, .field-name-field-svg-title img {
    position: absolute;
    bottom: 30%;
  }
  @media only screen and (min-width: $screen-xl-min) {
    min-height: 600px;
  }
  @media only screen and (min-width: $screen-lg-min) and (max-width: $screen-lg-max) {
    min-height: 512px;
  }
  @media only screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
    min-height: 400px;
  }
  @media only screen and (max-width: $screen-xs-max) {
    min-height: 300px;
  }
  @media only screen and (max-height: 800px) and (max-width: $screen-sm-max) {
    min-height: 350px;
    h1 {font-size: $font-size-h1 / 1.4;}
  }


  + .container {
    padding-top: 25px;
    @media only screen and (min-width: $screen-sm-min) {
      padding-top: 50px;
    }
  }

  .field-svg-title {
    margin-bottom: -1%;
    position: absolute;
    bottom: 41%;
    left: 0;
    height: auto;
    width: 100%;
    z-index: 11;
  }
}
.teammate-hero {
  h1 {
    @media only screen and (min-width: $screen-sm-min) {
      padding-bottom: 80px;
    }
  }
}

.pattern-hero {
  .img-hero {
    background-image: url(../img/pattern_0.png);
    background-repeat: repeat;
    background-size: auto;
  }
}

// frontpage only
.front {
  .img-hero {
    @media only screen and (min-width: $screen-xl-min) {
      min-height: 1000px;
    }
    @media only screen and (min-width: $screen-lg-min) and (max-width: $screen-lg-max) {
      min-height: 720px;
    }
    @media only screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
      min-height: 600px;
    }
    @media only screen and (max-height: 620px) and (max-width: $screen-lg-max) {
      min-height: 500px;
      h1 {font-size: $font-size-h1 / 1.4;}
      .field-svg-title {display: none;}
    }
    .field-svg-title {
      margin-bottom: -5%;
    }
  }
}

.antistatique_logo {
  fill: $pinkstatik;
  .dark-hero & {
    fill: $white;
  }
}

